k8s-vault-cert-mgr/ssl-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use.
    cert-manager.io/issuer: vault-issuer
    cert-manager.io/common-name: hashicups.yulei.aws.hashidemos.io
spec:
  ingressClassName: nginx
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
      - hashicups.yulei.aws.hashidemos.io
      - devopsdays-vault.yulei.aws.hashidemos.io
      secretName: hashicups-cert # < cert-manager will store the created certificate in this secret.
  rules:
  - host: hashicups.yulei.aws.hashidemos.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: devopsdays-vault.yulei.aws.hashidemos.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vault-ui
            port:
              number: 8200
...
